--- a/MouseTrap.WPF/MainWindow.xaml
+++ b/MouseTrap.WPF/MainWindow.xaml
@@ -6,13 +6,26 @@
         xmlns:local="clr-namespace:MouseTrap.WPF"
         mc:Ignorable="d"
         DataContext="{Binding RelativeSource={RelativeSource Self}}"
-        Title="MainWindow" Height="149" Width="315" KeyDown="Window_KeyDown">
+        Title="Mouse Trap" Height="600" Width="420" KeyDown="Window_KeyDown">
     <Grid>
         <Button x:Name="buttonRecord" Content="Record" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="54" Width="113" Click="Button_Click"/>
-        <Button x:Name="buttonPlayback" Content="Playback" HorizontalAlignment="Left" Margin="155,10,0,0" VerticalAlignment="Top" Height="54" Width="113" Click="Button_Click_1"/>
-        <Label x:Name="label" Content="" HorizontalAlignment="Left" Margin="10,85,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="buttonPlayback" Content="Playback" HorizontalAlignment="Left" Margin="128,10,0,0" VerticalAlignment="Top" Height="54" Width="113" Click="Button_Click_1"/>
+        <Label x:Name="label" Content="" HorizontalAlignment="Left" Margin="10,69,0,0" VerticalAlignment="Top"/>
         <ProgressBar x:Name="progressRecord" HorizontalAlignment="Left" Height="54" Margin="10,10,0,0" VerticalAlignment="Top" Width="113" IsIndeterminate="True" Opacity="0.5" Visibility="Collapsed"/>
         <ProgressBar x:Name="progressPlayback" HorizontalAlignment="Left" Height="54" Margin="155,10,0,0" VerticalAlignment="Top" Width="113" IsIndeterminate="True" Opacity="0.5" Visibility="Collapsed"/>
+        <ListBox x:Name="listbox" Margin="10,100,10,10" SelectionMode="Extended" ItemsSource="{Binding Path=Recordings, UpdateSourceTrigger=PropertyChanged}">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <Polyline Width="100" Height="100" Points="{Binding Points}" Stroke="Black" StrokeThickness="2" HorizontalAlignment="Right" Margin="0 5 10 5"/>
+                        <StackPanel>
+                            <TextBlock FontSize="21" Text="{Binding Date, StringFormat=Date: {0:HH:mm:ss}}"/>
+                            <TextBlock FontSize="21" Text="{Binding Length.TotalSeconds, StringFormat=Length: {0:N2} seconds}"/>
+                        </StackPanel>
+                    </StackPanel>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
 
     </Grid>
 </Window>
