--- a/MouseTrap.WPF/MainWindow.xaml
+++ b/MouseTrap.WPF/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:MouseTrap.WPF"
         mc:Ignorable="d"
         DataContext="{Binding RelativeSource={RelativeSource Self}}"
-        Title="Ricsi" Height="600" Width="420" KeyDown="Window_KeyDown">
+        Title="Ricsi 2.0" Height="600" Width="420" KeyDown="Window_KeyDown">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="9*"/>
